--- a/.gitignore
+++ b/.gitignore
@@ -1,40 +1,32 @@
-# Environment variables
-.env
+# Python
+__pycache__/
+*.py[cod]
+*$py.class
+*.so
+.Python
+venv/
+env/
+ENV/
+*.egg-info/
+dist/
+build/
 
-# Database files
+# Database
 *.db
 *.sqlite
 *.sqlite3
 
-# Python
-__pycache__/
-*.py[cod]
-*.class
-*.so
-.Python
-build/
-develop-eggs/
-dist/
-downloads/
-eggs/
-.eggs/
-lib/
-lib64/
-parts/
-sdist/
-var/
-wheels/
-*.egg-info/
-.installed.cfg
-*.egg
-MANIFEST
+# Logs
+*.log
+logs/
 
-# Virtual environments
-venv/
-env/
-ENV/
-.venv/
-.ENV/
+# Uploads
+uploads/*
+!uploads/.gitkeep
+
+# Environment
+.env
+.env.local
 
 # IDE
 .vscode/
@@ -45,51 +37,14 @@ ENV/
 
 # OS
 .DS_Store
-.DS_Store?
-._*
-.Spotlight-V100
-.Trashes
-ehthumbs.db
 Thumbs.db
 
-# Logs
-logs/
-*.log
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
-
-# Backup files
-*.backup
+# Backups
+backups/
 *.bak
-*-backup/
+*.backup
 
-# Temporary files
-*.tmp
-*.temp
-.cache/
-
-# SSL certificates (if any)
+# SSL certificates
 *.pem
 *.key
 *.crt
-
-# Nginx configuration (deployment specific)
-/etc/
-
-# System service files (deployment specific)
-*.service
-
-# Uploads directory
-uploads/*
-!uploads/.gitkeep
-
-# Test files
-test_setup.py
-tsms.py
-phone_numbers.txt
-
-# Old backups
-*.old
-backup_*
-backups/
